--- a/public/prueba.html
+++ b/public/prueba.html
@@ -31,7 +31,7 @@ and open the template in the editor.
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <nav class="navbar navbar-light" style="background-color: #e3f2fd;" role="navigation">
+        <nav class="navbar navbar-light" style="background-color: #A93226;" role="navigation">
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -39,8 +39,7 @@ and open the template in the editor.
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand">Inicio</a>
+                    </button> 
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <form class="navbar-form navbar-right" role="form">
@@ -59,15 +58,15 @@ and open the template in the editor.
         <!-- Main jumbotron for a primary marketing message or call to action -->
         <div class="jumbotron">
             <div class="container">
-                <h1>Bienvenido a Virtualbank</h1>
+                <h1>Inicio</h1>
                 <button type="submit"  class="btn btn-success" >Transferencia</button>
-                <p>La facilidad de un banco en la nube.</p>
+                <p></p>
             </div>
         </div>
         <hr>
 
         <footer>
-            <p>&copy;Proyecto arem tercer corte 2018 </p>
+            
         </footer>
     </div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
