prueba color e interfaz

--- a/public/prueba.html
+++ b/public/prueba.html
@@ -59,7 +59,17 @@ and open the template in the editor.
         <div class="jumbotron">
             <div class="container">
                 <h1>Inicio</h1>
-                <button type="submit"  class="btn btn-success" >Transferencia</button>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p>¿Que quieres hacer hoy?</p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <button class="btn btn-success" >Pagar</button>
+                <button class="btn btn-success" >Enviar</button>
+                <button class="btn btn-success" >Pedir</button>
+                <button class="btn btn-success" >Cobrar</button>
                 <p></p>
             </div>
         </div>
