--- a/public/prueba.html
+++ b/public/prueba.html
@@ -73,6 +73,23 @@ and open the template in the editor.
                 <p></p>
             </div>
         </div>
+        <div class="jumbotron">
+            <div class="container">
+                <h1> Dinero Disponible </h1>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p>$ 20.000.000</p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <h1> Total </h1>
+                <p>$ 20.000.000</p>
+                <p></p>
+                <p></p>
+                <p></p>
+            </div>
+        </div>
         
 
         <footer>
