--- a/public/prueba.html
+++ b/public/prueba.html
@@ -39,7 +39,8 @@ and open the template in the editor.
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
-                    </button> 
+                    </button>
+                    <a class="navbar-brand" href="prueba.html">VirtualBank</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <form class="navbar-form navbar-right" role="form">
@@ -58,7 +59,10 @@ and open the template in the editor.
         <!-- Main jumbotron for a primary marketing message or call to action -->
         <div class="jumbotron">
             <div class="container">
-                <h1>Inicio</h1>
+                <h3>VirtualBank</h3>
+                <p></p>
+                <p></p>
+                <h2>Inicio</h2>
                 <p></p>
                 <p></p>
                 <p></p>
@@ -75,7 +79,7 @@ and open the template in the editor.
         </div>
         <div class="jumbotron">
             <div class="container">
-                <h1> Dinero Disponible </h1>
+                <h3> Dinero Disponible </h3>
                 <p></p>
                 <p></p>
                 <p></p>
@@ -83,8 +87,8 @@ and open the template in the editor.
                 <p></p>
                 <p></p>
                 <p></p>
-                <h1> Total </h1>
-                <p>$ 20.000.000</p>
+                <h3> Total </h3>
+                <p>$ 25.000.000</p>
                 <p></p>
                 <p></p>
                 <p></p>
