--- a/public/prueba.html
+++ b/public/prueba.html
@@ -40,17 +40,13 @@ and open the template in the editor.
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="prueba.html">VirtualBank</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <form class="navbar-form navbar-right" role="form">
                         <div class="form-group">
-                            <input type="text" placeholder="Usuario" class="form-control">
+                            <p>Usuario</p>
                         </div>
-                        <div class="form-group">
-                            <input type="password" placeholder="Pass" class="form-control">
-                        </div>
-                        <button type="submit" class="btn btn-success">SignIn</button>
+                        <button type="submit" class="btn btn-success">Ajustes</button>
                     </form>
                 </div><!--/.navbar-collapse -->
             </div>
@@ -59,7 +55,7 @@ and open the template in the editor.
         <!-- Main jumbotron for a primary marketing message or call to action -->
         <div class="jumbotron">
             <div class="container">
-                <h3>VirtualBank</h3>
+                <h1>VirtualBank</h1>
                 <p></p>
                 <p></p>
                 <h2>Inicio</h2>
