prueba color e interfaz

--- a/public/prueba.html
+++ b/public/prueba.html
@@ -44,9 +44,9 @@ and open the template in the editor.
                 <div id="navbar" class="navbar-collapse collapse">
                     <form class="navbar-form navbar-right" role="form">
                         <div class="form-group">
-                            <p>Usuario</p>
+                            <h3> Usuario    </h3>
                         </div>
-                        <button type="submit" class="btn btn-success">Ajustes</button>
+                        <button type="submit" class="btn btn-success">Cerrar sesión</button>
                     </form>
                 </div><!--/.navbar-collapse -->
             </div>
