prueba color e interfaz

--- a/public/prueba.html
+++ b/public/prueba.html
@@ -43,9 +43,6 @@ and open the template in the editor.
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <form class="navbar-form navbar-right" role="form">
-                        <div class="form-group">
-                            <h3> Usuario    </h3>
-                        </div>
                         <button type="submit" class="btn btn-success">Cerrar sesión</button>
                     </form>
                 </div><!--/.navbar-collapse -->
@@ -58,11 +55,11 @@ and open the template in the editor.
                 <h1>VirtualBank</h1>
                 <p></p>
                 <p></p>
-                <h2>Inicio</h2>
+                <h2>  Inicio</h2>
                 <p></p>
                 <p></p>
                 <p></p>
-                <p>¿Que quieres hacer hoy?</p>
+                <p>  ¿Que quieres hacer hoy?</p>
                 <p></p>
                 <p></p>
                 <p></p>
@@ -70,7 +67,6 @@ and open the template in the editor.
                 <button class="btn btn-success" >Enviar</button>
                 <button class="btn btn-success" >Pedir</button>
                 <button class="btn btn-success" >Cobrar</button>
-                <p></p>
             </div>
         </div>
         <div class="jumbotron">
@@ -79,12 +75,15 @@ and open the template in the editor.
                 <p></p>
                 <p></p>
                 <p></p>
-                <p>$ 20.000.000</p>
+                <input id="disponible" rows="1" name="something" disabled style="width:400px" >
                 <p></p>
                 <p></p>
                 <p></p>
                 <h3> Total </h3>
-                <p>$ 25.000.000</p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <input id="total" rows="1" name="something" disabled style="width:400px" >
                 <p></p>
                 <p></p>
                 <p></p>
