--- a/public/prueba.html
+++ b/public/prueba.html
@@ -67,31 +67,32 @@ and open the template in the editor.
                 <button class="btn btn-success" >Enviar</button>
                 <button class="btn btn-success" >Pedir</button>
                 <button class="btn btn-success" >Cobrar</button>
-                <div class="container">
-                    <h3> Dinero Disponible </h3>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <input id="disponible" rows="1" name="something" disabled style="width:400px" >
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <h3> Total </h3>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <input id="total" rows="1" name="something" disabled style="width:400px" >
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                </div>
             </div>
         </div>
-
-
+        <div class="jumbotron">
+            <div class="container">
+                <h3> Dinero Disponible </h3>
+                <p></p>
+                <p></p>
+                <p></p>
+                <input id="disponible" rows="1" name="something" disabled style="width:400px" >
+                <p></p>
+                <p></p>
+                <p></p>
+                <h3> Total </h3>
+                <p></p>
+                <p></p>
+                <p></p>
+                <input id="total" rows="1" name="something" disabled style="width:400px" >
+                <p></p>
+                <p></p>
+                <p></p>
+            </div>
+        </div>
+        
 
         <footer>
-
+            
         </footer>
     </div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
